fix overflow:auto + justify-content:center issues

--- a/src/app.css
+++ b/src/app.css
@@ -79,20 +79,6 @@ h3 {
     }
 }
 
-.sidebar {
-    width: 300px;
-    flex-shrink: 0;
-    padding: 16px;
-    background: hsl(220, 35%, 15%);
-    display: flex; flex-direction: column;
-    gap: 6px;
-
-    h3, p {
-        text-align: center;
-        margin: 0;
-    }
-}
-
 label {
     font-weight: bold;
     font-size: 16px;
